--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,6 +11,11 @@
       "src": "./icons/apple.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "./icons/apple.png",
+      "type": "image/png",
+      "sizes": "1024x1024"
     }
   ],
   "start_url": ".",
